<resources>
    <string name="app_name">DynamicApps</string>
    <string name="food_timer">Food Timer</string>
    <string name="drink_timer">Drink Timer</string>
    <string name="to_home_page">To Home Page</string>
    <string name="minutes">Minutes</string>
    <string name="set">Set</string>
    <string name="Timer_String">00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="homepage">Homepage</string>
    <string name="open_drink_timer">Open Drink Timer</string>
    <string name="open_food_timer">Open Food Timer</string>
    <string name="title_activity_tracker_details">TrackerDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="meal_name">Meal Name</string>
    <string name="food_items">Food Items</string>
    <string name="date_text">Date Text</string>
    <string name="calories">Calories</string>
    <string name="calories_count">Calories Count</string>
    <string name="carbs">Carbs</string>
    <string name="carbs_count">Carbs Count</string>
    <string name="protein">Protein</string>
    <string name="protein_count">Protein Count</string>
    <string name="hasChild"><![CDATA[>]]></string>
    <string name="MealNumber">What meal number is this?</string>
    <string name="hintFoodItems">What did you eat in the meal?</string>
    <string name="Calories">Total Calories of the meal?</string>
    <string name="Protein">Total Protein? (Grams)</string>
    <string name="Carbs">Total Carbs? (Grams)</string>
    <string name="submitButton">Submit</string>
    <string name="open_meal_info">Open Meal Info</string>
    <string name="open_meal_input">Open Meal Input</string>
    <string name="meal_info">Meal Info</string>
    <string name="timers">Timers</string>
    <string name="title_activity_medicine_reminder_main">MedicineReminderMain</string>
    <string name="CreateReminderText">Click on the button below to begin creating your reminder!</string>
    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="event_name">Event Name</string>
    <string name="save_event">Save Event</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="month_year">Oct 2021</string>
    <string name="cal_next"><![CDATA[->]]></string>


</resources>