<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrinkTimer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/drink_timer"
        android:textSize="34sp" />

    <Button
        android:id="@+id/to_home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/to_home_page"/>

    <EditText
        android:id="@+id/drink_edit_text_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textDrinkTimer"
        android:layout_centerHorizontal="true"
        android:hint="@string/minutes"
        android:inputType="number"
        android:maxLength="4"
        android:minHeight="48dp"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/drink_button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/drink_edit_text_input"
        android:layout_toEndOf="@+id/drink_edit_text_input"
        android:text="@string/set" />

    <TextView
        android:id="@+id/textDrinkTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="10dp"
        android:text="@string/Timer_String"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

    <Button
        android:id="@+id/drink_button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textDrinkTimer"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/drink_button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/drink_button_start_pause"
        android:layout_toEndOf="@+id/drink_button_start_pause"
        android:text="@string/reset"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>
