<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealInfo.MealInfoMain">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="380dp"
        android:layout_height="350dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/MealNumber"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/MealNumber"
            android:inputType="number"
            android:padding="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/FoodItems"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hintFoodItems"
            android:padding="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/CaloriesInput"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:hint="@string/Calories"
            android:inputType="number"
            android:padding="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/ProteinInput"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:hint="@string/Protein"
            android:inputType="number"
            android:padding="14dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/CarbsInput"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:hint="@string/Carbs"
            android:inputType="number"
            android:padding="14dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/submitButton"/>
    </LinearLayout>
    <Button
        android:id="@+id/to_home_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/to_home_page"/>
</RelativeLayout>