<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/dateText"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/date_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/foodList"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/dateText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/food_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/foodList"
        android:layout_marginTop="5dp"
        android:text="@string/calories"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/caloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_alignBaseline="@id/calories"
        android:textSize="18sp"
        android:layout_toEndOf="@id/calories"
        android:text="@string/calories_count"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/cholesterol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calories"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Cholesterol"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/cholesterolText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cholesterol"
        android:layout_marginStart="0dp"
        android:singleLine="true"
        android:layout_toEndOf="@id/calories"
        android:text="Cholesterol Count"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cholesterol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/protein"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/proteinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_alignBaseline="@id/protein"
        android:layout_toEndOf="@id/calories"
        android:textSize="18sp"
        android:text="@string/protein_count"
        android:textStyle="bold"/>

</RelativeLayout>